--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><link rel="stylesheet" href="style.css">
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smart Medical Search</title>
@@ -17,5 +18,6 @@
     <footer>
         <p>&copy; 2025 Smart Medical Search</p>
     </footer>
-</body>
+</body><script defer src="script.js"></script>
+    
 </html>
