--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         document.addEventListener("DOMContentLoaded", function () {
             const firebaseConfig = {
-                apiKey: "YOUR_API_KEY",
+                apiKey: "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",
                 authDomain: "YOUR_AUTH_DOMAIN",
                 databaseURL: "YOUR_DATABASE_URL",
                 projectId: "YOUR_PROJECT_ID",
